# gerium

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  macos-ios-build.sh  vcpkg-configuration.json  vcpkg.json
cmake/: assets.cmake  ffx_vk.patch  fidelityfx.cmake  fidelityfx.patch  properties.cmake  vcpkg.cmake  vcpkg_android.cmake  version.cmake  x11.cmake
example/: Application.cpp  Application.hpp  AsyncLoader.cpp  AsyncLoader.hpp  BVHNode.cpp  BVHNode.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Common.cpp  Common.hpp  Converters.hpp  EntityComponentSystem.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  RenderPass.cpp  RenderPass.hpp  ResourceManager.cpp  ResourceManager.hpp  Scene.cpp  Scene.hpp  Settings.hpp  glTF.cpp  glTF.hpp  main.cpp
example/android/: build.gradle.kts  settings.gradle.kts
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/res/drawable/: ic_launcher_foreground.xml
example/android/app/src/main/res/values/: strings.xml  themes.xml
example/android/gradle/wrapper/: gradle-wrapper.properties
example/cluster-pack/: ClusterPack.cpp
example/frame-graphs/: main.yaml  skydome.yaml
example/models/: LICENSES.txt
example/shaders/: base.frag.glsl  base.vert.glsl  csm.geom.glsl  csm.vert.glsl  csm_culling.comp.glsl  culling.comp.glsl  depth.vert.glsl  depth_reduce.comp.glsl  gbuffer.frag.glsl  gbuffer.mesh.glsl  gbuffer.task.glsl  gbuffer.vert.glsl  indirect.comp.glsl  light.frag.glsl  light_filter.comp.glsl  light_integration.comp.glsl  light_scattering.comp.glsl  light_temporal_filter.comp.glsl  lines.glsl  present.frag.glsl  skydome.frag.glsl  skydome_gen.comp.glsl  taa.comp.glsl  types.h  volumetric_inject.comp.glsl  volumetric_noise.comp.glsl
example/shaders/common/: defines.h  lighting.h  textures.h  types.h  types_generic.h  types_meshlet.h  utils.h
example/techniques/: base.yaml  lines.yaml  postprocess.yaml  present.yaml  skydome.yaml
examples/example1/: Application.cpp  Application.hpp  CMakeLists.txt  Camera.cpp  Common.cpp  Common.hpp  Converters.hpp  EntityComponentSystem.hpp  Finally.hpp  Model.cpp  Model.hpp  RenderPass.cpp  ResourceManager.cpp  ResourceManager.hpp  Resources.hpp.in  Scene.cpp  Snapshot.cpp  Snapshot.hpp  TaskScheduler.cpp  TaskScheduler.hpp  glTF.hpp  main.cpp
examples/example1/android/: build.gradle.kts
examples/example1/android/app/: build.gradle.kts
examples/example1/android/app/src/main/: AndroidManifest.xml
examples/example1/android/gradle/wrapper/: gradle-wrapper.properties
examples/example1/components/: Camera.hpp  Changes.hpp  Children.hpp  Collider.hpp  Constraint.hpp  ECS.hpp  GameObject.cpp  GameObject.hpp  LocalTransform.hpp  MeshIndices.hpp  Name.hpp  Node.hpp  Parent.hpp  Position.hpp  Renderable.hpp  RigidBody.hpp  Settings.hpp  Static.hpp  Transform.hpp  Vehicle.hpp  VehicleController.hpp  Wheel.hpp  WorldTransform.hpp
examples/example1/develop/: DevelopUI.cpp  DevelopUI.hpp  DeveloperUI.cpp  DeveloperUI.hpp
examples/example1/events/: AddModelEvent.hpp  AddNodeNameEvent.hpp  ChangeColliderEvent.hpp  ChangeMaterialsEvent.hpp  ChangeNodeNameEvent.hpp  ChangeRigidBodyEvent.hpp  ChangeStaticEvent.hpp  ChangeVehicleEvent.hpp  DeleteNodeByNameEvent.hpp  DeleteNodeEvent.hpp  DirtySceneEvent.hpp  Event.hpp  EventManager.cpp  EventManager.hpp  FlushClusterEvent.hpp  MoveNodeEvent.hpp  TransformNodeEvent.hpp  VehicleControllerEvent.hpp  WindowStateEvent.cpp  WindowStateEvent.hpp
examples/example1/frame-graphs/: compat.yaml  main.yaml  modern.yaml
examples/example1/passes/: CullingPass.cpp  CullingPass.hpp  GBufferPass.cpp  GBufferPass.hpp  MergeInstancesPass.cpp  MergeInstancesPass.hpp  PresentPass.cpp  PresentPass.hpp  RenderPass.cpp  RenderPass.hpp
examples/example1/services/: ClearService.cpp  ClearService.hpp  GameService.cpp  GameService.hpp  InputService.cpp  InputService.hpp  PhysicsService.cpp  PhysicsService.hpp  RenderService.cpp  RenderService.hpp  SceneService.cpp  SceneService.hpp  ServiceManager.cpp  ServiceManager.hpp  TimeService.cpp  TimeService.hpp
examples/example1/shaders/: culling.comp.glsl  gbuffer.frag.glsl  gbuffer.vert.glsl  lines.glsl  present.frag.glsl  screen.vert.hlsl  taa.frag.glsl
examples/example1/shaders/common/: defines.h  textures.h  types.h
examples/example1/techniques/: base.yaml  lines.yaml  other.yaml  pbr.yaml  postprocess.yaml
examples/example1/utils/: Constants.hpp  Finally.hpp  Functions.hpp  HashedStringOwner.hpp  NonCopyable.hpp  NonMovable.hpp  Primitives.hpp  ReflectCppConverters.hpp  Resources.hpp.in  YamlConverters.hpp
examples/example2/: Application.cpp  Application.hpp  CMakeLists.txt  Common.hpp  Converters.hpp  Primitives.hpp  ResourceManager.cpp  Settings.hpp  main.cpp
examples/example2/cluster-pack/: ClusterPack.cpp
examples/example2/shaders/: csm.geom.glsl  csm.vert.glsl  csm_culling.comp.glsl  culling.comp.glsl  depth_reduce.comp.glsl  gbuffer.task.glsl  light.frag.glsl  light_integration.comp.glsl  screen.vert.hlsl  skydome.vert.glsl  skydome_gen.comp.glsl  skydome_prefiltered.comp.glsl  volumetric_inject.comp.glsl
examples/example2/shaders/common/: lighting.h  types.h
examples/example2/techniques/: base.yaml
include/gerium/: gerium-android.h  gerium-callbacks.h  gerium-core.h  gerium-enums.h  gerium-fidelityfx.h  gerium-ios.h  gerium-linux.h  gerium-platform.h  gerium-structs.h  (+5 more)
resources/: rotate.frag.glsl  rotate.vert.glsl
sources/: Application.cpp  Application.hpp  CommandBuffer.cpp  CommandBuffer.hpp  Exceptions.hpp  File.cpp  File.hpp  FrameGraph.cpp  FrameGraph.hpp  Gerium.cpp  Gerium.hpp  Handles.hpp  Input.cpp  Input.hpp  Logger.cpp  Logger.hpp  Mutex.cpp  Mutex.hpp  Object.cpp  Object.hpp  ObjectPtr.hpp  Profiler.cpp  Profiler.hpp  ProfilerUI.cpp  ProfilerUI.hpp  Renderer.cpp  Renderer.hpp  ResourcePool.hpp  Signal.cpp  Signal.hpp  StringPool.cpp  StringPool.hpp
specs/: api.idl  callbacks.idl  core.idl  enums.idl  structs.idl
tests/: CMakeLists.txt  ResourcePoolTests.cpp  tests.cpp
(+93 files in other folders)
